objects/ssot__CoverageBenefitItemLimit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AllowedLimitNumber__c</fullName>
        <label>Allowed Limit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppliedLimitNumber__c</fullName>
        <label>Applied Limit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareLimitTypeId__c</fullName>
        <label>Care Limit Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageBenefitItemId__c</fullName>
        <label>Coverage Benefit Item</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageLevel__c</fullName>
        <label>Coverage Level</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coverage Benefit Item Limit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LimitNoteText__c</fullName>
        <label>Limit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetworkType__c</fullName>
        <label>Network Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityOrderNumber__c</fullName>
        <label>Priority Order</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TermType__c</fullName>
        <label>Term Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721967473_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitItemLimit_CoverageBen_rel</label>
        <referenceTo>ssot__CoverageBenefitItem__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitItemLimit_CoverageBen_rel</relationshipLabel>
        <relationshipName>rel_1716721967473_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>